--- a/IPL_Auction_Data_Analysis_.ipynb
+++ b/IPL_Auction_Data_Analysis_.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Deepali1311/IPL_Auction-DA1/blob/main/IPL_Auction_Data_Analysis_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "vKU9LZ84t9K1"
       },
       "source": [
@@ -769,49 +759,6 @@
           },
           "metadata": {},
           "execution_count": 13
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#df['PRICE'].dtypes"
-      ],
-      "metadata": {
-        "id": "1RyGlk7ypwf7"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "'''df[' PRICE'] = df['PRICE'].str.replace('?', '')\n",
-        "df[' PRICE'] = df['PRICE'].str.replace(',', '')\n",
-        "df['PRICE']'''"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "id": "8G9-a4f_o1iR",
-        "outputId": "ec668dd8-363e-4e57-9547-9444eab65bf8"
-      },
-      "execution_count": 17,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "\"df[' PRICE'] = df['PRICE'].str.replace('?', '')\\ndf[' PRICE'] = df['PRICE'].str.replace(',', '')\\ndf['PRICE']\""
-            ]
-          },
-          "metadata": {},
-          "execution_count": 17
         }
       ]
     },
@@ -3307,8 +3254,7 @@
     "colab": {
       "name": "IPL-Auction-Data-Analysis .ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "include_colab_link": true
+      "collapsed_sections": []
     }
   },
   "nbformat": 4,
